Fix newsfeed carousel z-index and change price color to green

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -52,3 +52,11 @@ button {
 .slick-track {
     display: flex;
 }
+
+.slick-initialized {
+    overflow: hidden;
+}
+
+.slick-list {
+    overflow: hidden;
+}
