--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -11,10 +11,10 @@ $color-black: rgb(0, 0, 0);
 
 $color-grey: rgb(189,195,199);
 $color-grey-light: rgb(237,240,241);
-// $color-grey-dark: rgb(127,140,141); // TEMPORARY COLOR-GREY-DARK CHANGE
 $color-grey-dark: rgb(90, 95, 96);
 
 $color-red: rgb(231,76,60);
+$color-green: rgb(46,204,113);
 
 $color-facebook-0: rgb(59,89,152);
 $color-facebook-1: rgb(42,75,109);
