--- a/src/styles/components/want/_want.scss
+++ b/src/styles/components/want/_want.scss
@@ -18,7 +18,7 @@
     }
 
     &__pay {
-        color: $color-primary-0;
+        color: $color-green;
         font-weight: 700;
     }
 
